fix program freezing when loading images

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,4 +32,5 @@ target_link_libraries(screen-tracker PRIVATE
     tracker-module
 
     Qt${QT_VERSION}::Widgets
+    Qt${QT_VERSION}::Concurrent
 )
